--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
         <!-- Bottom Container -->
         <div class="bottom-container">
-            <div class="bottom-title">PHONENUMBER</div>
-            <a href="tel:3106123456789" class="bottom-text">+3106123456789
+            <div class="bottom-title">LINKEDIN</div>
+            <a href="www.linkedin.com/in/floortje-warmerdam" class="bottom-text">floortje.warmerdam
         </div>
         </div>
 
