--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     </div>
                     <div class="intro-list-item">
                         <span class="intro-list-label">LANGUAGE:</span>
-                        <span class="intro-list-value">DUTCH (NATVIVE) & ENGLISH</span>
+                        <span class="intro-list-value">DUTCH (NATIVE) & ENGLISH</span>
                     </div>
                     <div class="intro-list-item">
                         <span class="intro-list-label">SORFTWARE:</span>
