--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- Bottom Container -->
         <div class="bottom-container">
             <div class="bottom-title">LINKEDIN</div>
-            <a href="https://www.linkedin.com/in/floortje-warmerdam-710272220/?originalSubdomain=nl" class="bottom-text">floortje.warmerdam
+            <a href="https://www.linkedin.com/in/floortje-warmerdam-710272220/?originalSubdomain=nl target="_blank" class="bottom-text">floortje.warmerdam
         </div>
         </div>
 
