--- a/index.html
+++ b/index.html
@@ -864,8 +864,8 @@
         <!-- Mobile Contact Bar -->
         <div class="mobile-contact-bar mobile-only">
             <div class="mobile-contact-item">
-                <span class="mobile-contact-label">Phone</span>
-                <a href="tel:+31612345678" class="mobile-contact-value">+31 6 1234 5678</a>
+                <span class="mobile-contact-label">LINKEDIN</span>
+                <a href="https://www.linkedin.com/in/floortje-warmerdam-710272220/?originalSubdomain=nl target="_blank" class="mobile-contact-value">floortje.warmerdam</a>
             </div>
             <div class="mobile-contact-item">
                 <span class="mobile-contact-label">Email</span>
