--- a/index.html
+++ b/index.html
@@ -647,12 +647,7 @@
                 </div>
                 <div class="case-info-row">
                     <p class="case-body">Alpinestars is a leading Italian manufacturer of high-performance protective
-                        gear and apparel for motorcycling, auto racing, and action sports. Our project for Alipenstars
-                        began with designing a webshop for there European market. Once going live, the results were
-                        promising we saw the design performed well, customer engagement was strong. In the US the team
-                        had taking note and decided that the right move was to integrated the same design for their
-                        market too. It's one thing to design for once scale, but to realize the potential of bringing to
-                        a higher level was a bonus in this project.</p>
+                        gear and apparel for motorcycling, auto racing, and action sports.</p>
                     <div class="case-meta">
                         <div class="case-year">
                             <h3 class="case-year-title">Year</h3>
@@ -672,10 +667,12 @@
                 </div>
                 <div class="case-learning">
                     <h3 class="case-learning-title">Learning</h3>
-                    <p class="case-learning-body">Partnering with a brand designer who established the homepage's visual
-                        identity, I extended their design language across the other pages on the webshop.This
-                        collaboration thought me the importance of cross-disciplinary dialogue in translating brand
-                        principles into a design that work for conversion driven platforms.</p>
+                    <p class="case-learning-body">Our project for Alipenstars
+                        began with designing a webshop for there European market. Once going live, the results were
+                        promising we saw the design performed well, customer engagement was strong. In the US the team
+                        had taking note and decided that the right move was to integrated the same design for their
+                        market too. It's one thing to design for once scale, but to realize the potential of bringing to
+                        a higher level was a bonus in this project. I learned that scaling a design system isn't just a technical challenge—it requires balancing global consistency with local adaptation. </p>
                 </div>
                 <div class="take-a-look"><a href=https://www.alpinestars.com/ target="_blank">(TAKE A LOOK)</a></div>
                 <div class="case-image-container">
