--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         <div class="testimonial-title">WOUTER</div>
                         <div class="testimonial-body">She truly make a difference when it comes to ensuring efficient
                             processes, being a good critical voice within the team, and striving for an extra level of
-                            cohesion, quality and motivation within the team.”</div>
+                            cohesion, quality and motivation.”</div>
                     </div>
                 </div>
             </div>
